# Google-analytics

./: .cursorrules  .gitignore  DOCKER_FRONTEND_GUIDE.md  DOCKER_SETUP_COMPLETE.md  DOCKER_SETUP_SUMMARY.md  DOCKER_TESTING_GUIDE.md  FRONTEND_BUILD_COMPLETE.md  PROGRESS_REPORT.md  PROJECT_STATUS.md  QUICK_START_DOCKER.md  README.md  SESSION_3_SUMMARY.md  SESSION_5_SUMMARY.md  SESSION_6_FINAL_SUMMARY.md  SESSION_6_SUMMARY.md  docker-compose.test.yml  docker-compose.yml  env.example  start-docker.ps1  start-docker.sh  start-test.ps1  start-test.sh
python/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
python/alembic/: env.py
python/alembic/versions/: 001_initial_schema.py  002_pgsodium_encryption.py  003_tenant_memberships.py  004_add_tenant_columns.py  005_ga4_metrics_table.py  006_ga4_embeddings_table.py  007_hnsw_vector_indexes.py  008_transformation_audit_log.py  009_gdpr_tenant_deletion.py  010_vector_integrity_constraints.py
python/src/: __init__.py
python/src/agents/: __init__.py  agent_factory.py  base_agent.py  circuit_breakers.py  data_fetcher_agent.py  embedding_agent.py  orchestrator_agent.py  orchestrator_state_machine.py  orchestrator_with_handoff.py  parallel_executor.py  rag_agent.py  reporting_agent.py  streaming_callback.py
python/src/agents/middleware/: __init__.py  schema_validator.py
python/src/agents/schemas/: __init__.py  charts.py  handoff_protocol.py  results.py
python/src/agents/tools/: __init__.py  ga4_tool.py
python/src/server/: database.py  main.py
python/src/server/api/v1/: __init__.py  analytics.py  auth.py  chat.py  comparison.py  export.py  health.py  report_versions.py  sharing.py  sse_example.py  tenants.py  unified_analytics.py
python/src/server/config/: personas.py
python/src/server/core/: __init__.py  config.py  connection_manager.py  jwt_validator.py
python/src/server/middleware/: __init__.py  auth.py  chart_validator.py  embedding_validator.py  grounding_enforcer.py  idempotency.py  rls_enforcer.py  tenant.py
python/src/server/models/: __init__.py  agent_output.py  chat.py  tenant.py  user.py
python/src/server/monitoring/: __init__.py  alerts.py  connection_pool.py  metrics.py  rate_limit_metrics.py  sentry_config.py
python/src/server/services/: auth.py
python/src/server/services/analytics/: comparison_service.py  descriptive_analytics.py  period_calculator.py  predictive_analytics.py
python/src/server/services/cache/: __init__.py  progressive_cache.py  response_cache.py
python/src/server/services/embedding/: __init__.py  anomaly_alerts.py  drift_detector.py  generator.py  quality_checker.py  (+3 more)
(+214 files in other folders)
